# Cpp_Btc_Client

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  codecov.yml  main.cpp  reqs.sh
include/: CONSTANTS.h  functions.h  includes.h  typedefs.h
libs/catch2/: catch.hpp
libs/gmp/: FindGMP.cmake
libs/ripemd160/: Ripemd160.cpp  Ripemd160.h  Utils.cpp  Utils.h
libs/sha256/: SHA256.cpp  SHA256.h
src/: HelperFunctions.cpp  HelperFunctions.h  functions.cpp  functions.h  main.cpp
src/block/: BlockHeader.cpp  BlockHeader.h  BlockHeaderBuilder.h
src/merkleTree/: MerkleTree.cpp  MerkleTree.h
src/playground/: playground.cpp  playground.h
src/transaction/: Script.cpp  Script.h  Transaction.cpp  Transaction.h  TransactionInput.cpp  TransactionInput.h
src/transaction/txInput/: TransactionInput.cpp  TransactionInput.h  TxInputBuilder.h
src/transaction/txOutput/: TransactionOutput.cpp  TransactionOutput.h
test/: BlockHeaderBuilderTest.cpp  BlockHeaderTest.cpp  MerkleTreeTest.cpp  Ripemd160Test.cpp  ScriptTest.cpp  Sha256Test.cpp  TransactionInputTest.cpp  TransactionOutputTest.cpp  TxInputBuilderTest.cpp  functionsTest.cpp
